# she_net

./: .clang-format  .gitmodules  CMakeLists.txt  Dependencies_build.sh  README.md  README_project.md  setConfig.sh
DeviceEnrollmentClouldService/: .gitmodules  CMakeLists.txt  README_project.md
DeviceEnrollmentClouldService/src/: method_test.h
DeviceEnrollmentClouldService/src/base/: config.h
DeviceEnrollmentClouldService/src/net/: Epoll.cpp  packageInStream.h
DeviceEnrollmentClouldService/src/server/: server.cpp  server.h
DeviceEnrollmentClouldService/test/buffer_test/: header.h  main.cpp
cmake/: compilation_options.cmake  config.cmake  import.cmake  she_net-config.cmake  src_build.cmake  target_exec.cmake  target_test.cmake  z_install.cmake
document/: error_code_table.md  recv.md
exec/: application.cpp
scripts/: googletest-1.12.1_build.sh
src/: DeviceEnrollmentClouldService.cpp  DeviceEnrollmentClouldServiceD.cpp  client_info.h  connection_pool.cpp  connection_pool.h  error_code.h  four_tuple.h  make_unique.h  message.cpp  message.h  message_with_connection_pool.cpp  message_with_connection_pool.h  method_test.h  net_base.h  net_transport.h  quadruple.h  she_net.h  socket.cpp  socket.h  transport_address_type.h
src/base/: base64.h  config.h  log.h
src/basic_io_operations/: basic_io_operations.cpp  basic_io_operations.h
src/basic_socket_operations/: accept.cpp  accept.h  basic_socket_operations.cpp  basic_socket_operations.h  bind.cpp  bind.h  listen.cpp  listen.h  socket.cpp  socket.h  socket_define.h
src/basic_tcp/: tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
src/basic_udp/: udp_client.cpp  udp_client.h  udp_server.cpp  udp_server.h
src/epoll/: epoll.cpp  epoll.h
src/epoll_wrapper/: epoll_wrapper.cpp  epoll_wrapper.h
src/high_coupling_model/: message.cpp  message.h  socket.cpp  socket.h
src/net/: Epoll.cpp  Epoll.h  packageInStream.cpp  packageInStream.h  packageInStreamBase64.cpp  packageInStreamBase64.h  socket_base.cpp  socket_base.h
src/poll/: poll.cpp  poll.h
src/poll_wrapper/: poll_wrapper.cpp  poll_wrapper.h
src/select/: select.cpp  select.h
src/select_wrapper/: select_wrapper.cpp  select_wrapper.h
src/server/: IOEvent.cpp  IOEvent.h  server.cpp  server.h
src/sheNetException/: sheNetException.cpp  sheNetException.h
src/she_net_exception/: she_net_exception.cpp  she_net_exception.h
src/stream_data_parsing/: base64.h  fixed_length_messages.h  json.h  length_prefixed_messages.h  packageInStreamBase64.cpp  packageInStreamBase64.h  xml.h
test/: client.py  global_test_set.h  m10_basic_io_operations_tcp_test.h  m10_basic_io_operations_test.h  m11_basic_io_operations_udp_test.h  m12_select_wrapper_test.h  m13_poll_wrapper_test.h  m14_epoll_wrapper_test.h  m15_stream_data_test.h  m1_host_byte_order_test.h  m2_base_socket_test.h  m3_tcp_io_test.h  m4_udp_io_test.h  m5_select_test.h  m6_poll_test.h  m7_epoll_test.h  m8_tcp_bidirectional_io_test.h  m9_basic_socket_operations.h  main.cpp  mian.cpp  t1_socket.h  test_example.h
test/basic_network_interface_testing/: t1_socket_and_io.h  t2_select.h  t3_poll.h  t4_epoll.h
test/buffer_test/: CMakeLists.txt  header.h  main.cpp
test/src_testing/: t1_basic_io_operations.h  t1_basic_socket_operations.cpp  t1_basic_socket_operations.h  t2_basic_io_operations_tcp.h  t3_basic_io_operations_udp.h  t4_select_wrapper.h  t5_poll_wrapper.h  t6_epoll_wrapper.h  t7_stream_data.h
test_py/: README.md  tcp_client.py  tcp_server.py
